--- a/css/productlist.css
+++ b/css/productlist.css
@@ -28,7 +28,7 @@ a:hover {
 }
 
 .items {
-  position: relative;
+  position: absolute;
   width: 960px;
   margin-right: -20px;
   padding-bottom: 5px;
@@ -76,4 +76,53 @@ a:hover {
 }
 .brands a {
   margin-right: 30px;
+}
+
+.line {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  border-radius: 15px;
+  background-color: #4b9cdb;
+}
+
+.load-wrapp {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  top: 0vh;
+  width: 100%;
+  height: 100%;
+
+  border-radius: 5px;
+  text-align: center;
+}
+
+.load-wrapp p {
+  padding: 0 0 20px;
+}
+.load-wrapp:last-child {
+  margin-right: 0;
+}
+
+.load-3 .line:nth-last-child(1) {
+  animation: loadingC 0.6s 0.1s linear infinite;
+}
+.load-3 .line:nth-last-child(2) {
+  animation: loadingC 0.6s 0.2s linear infinite;
+}
+.load-3 .line:nth-last-child(3) {
+  animation: loadingC 0.6s 0.3s linear infinite;
+}
+
+@keyframes loadingC {
+  0 {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(0, 15px);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
 }
